Chapter 5, on page 124. add Runtime Error Handler.
	* LEDDriver/test/LedDriverTest.c
	(test_OutOfBoundsProducesRuntimeError): add new test for Runtime
	error handler.

	* LEDDriver/src/RuntimeError.h: add Runtime Error handler.
	* LEDDriver/src/RuntimeErrorStub.h: ditto.
	* LEDDriver/src/RuntimeErrorStub.c: ditto.

	* LEDDriver/src/Makefile.am (libleddriver_la_SOURCES): add
	RuntimeErrorStub.c

	* LEDDriver/src/LedDriver.c (isInBounds): add function to check
	LED number boundary.
	(LedDriver_TurnOn): use isInBounds.
	(LedDriver_TurnOff): ditto.

--- a/LEDDriver/src/Makefile.am
+++ b/LEDDriver/src/Makefile.am
@@ -2,4 +2,4 @@ lib_LTLIBRARIES = libleddriver.la
 
 LDFLAGS = -no-undefined
 
-libleddriver_la_SOURCES = LedDriver.c
+libleddriver_la_SOURCES = LedDriver.c RuntimeErrorStub.c
